# avacana-gm

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  deny.toml
src/: lib.rs
src/git_manager/: composition.rs  facade.rs  facade_async.rs  facade_sync.rs  mod.rs
src/git_manager/auth/: attempt_budget.rs  capabilities.rs  chain.rs  chain_contracts.rs  chain_execution.rs  context.rs  environment_probe.rs  environment_probe_profile.rs  material.rs  material_auth.rs  material_https.rs  material_lookup.rs  material_netrc.rs  material_redaction.rs  material_types.rs  mod.rs
src/git_manager/core/: contracts.rs  contracts_errors.rs  contracts_local_workflow.rs  contracts_remote.rs  domain_contracts.rs  domain_contracts_advanced.rs  domain_contracts_history_rewrite.rs  domain_contracts_line_diff.rs  domain_contracts_plumbing.rs  domain_contracts_refs_meta.rs  domain_contracts_repository.rs  domain_contracts_scm_overview.rs  domain_contracts_status_diff.rs  domain_contracts_tags.rs  domain_contracts_working_copy.rs  mod.rs  operations_advanced.rs  operations_advanced_metadata.rs  operations_advanced_metadata_attributes.rs  operations_advanced_metadata_identity.rs  operations_advanced_metadata_status.rs  operations_advanced_metadata_submodules.rs  operations_advanced_metadata_worktree.rs  operations_advanced_stash.rs  operations_advanced_submodules.rs  operations_advanced_support.rs  operations_advanced_support_path.rs  operations_advanced_support_submodule.rs  operations_advanced_support_trace.rs  operations_advanced_support_worktree.rs  operations_branch.rs  (+75 more)
(+31 files in other folders)
